Added basic government scheme application